# python-recorder

./: .gitignore  README.md  app.py  example-config.yaml  localhost-vao-recorder.py  pyproject.toml  requirements.txt  vao-recorder.py  vao-recorder.yaml
.github/workflows/: poetry-publish.yaml
recorder/: __init__.py  __main__.py  config.py  io.py  recorder.py  settings.py
recorder/device/: __init__.py  camera.py  device.py  microphone.py  realsense.py
recorder/listener/: __init__.py  listener.py  localhost.py
tests/: conftest.py  test_config.py
