[tool.poetry]
name = "python-recorder"
version = "0.0.1"
description = ""
authors = ["Andreu Gimenez <esdandreu@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "recorder"}]

[tool.poetry.scripts]
recorder = "recorder.__main__:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.4.0"}
PyInquirer = "^1.0.3"
PyYAML = "^5.1"
numpy = "^1.22.2"
sounddevice = {version = "^0.4.4", optional = true}
pyrealsense2 = {version = "^2.50.0", optional = true}
Flask = {version = "^2.1.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[tool.poetry.extras]
realsense = ["pyrealsense2"]
microphone = ["sounddevice"]
localhost = ["Flask"]
all = ["pyrealsense2", "sounddevice", "Flask"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
